# price-feed

./: .env  Cargo.toml  README.md  sqlx-data.json
configuration/: base.yaml
migrations/: 20221228040107_add_market_data_table.sql
scripts/: init_db.sh
src/: configuration.rs  gecko_client.rs  lib.rs  main.rs  market_data_worker.rs  startup.rs
src/domains/: currency.rs  mod.rs
src/routes/: health_check.rs  mod.rs
src/routes/coin_market/: coin_fetch_error.rs  get_coin_market_details.rs  mod.rs
src/utils/: error_chain_fmt.rs  mod.rs
