[package]
name = "price-feed-server-v1"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "server"

[[bin]]
name = "price-feed-server"
path = "src/main.rs"

[dependencies]
actix-web = "4.2.1"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.38"
anyhow = "1.0.68"
serde = { version = "1", features = ["derive"] }
config = "0.13.3"
serde_json = "1.0.91"
